--- a/godot-firebase-analytics/src/main/AndroidManifest.xml
+++ b/godot-firebase-analytics/src/main/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <application android:networkSecurityConfig="@xml/network_security_config">
+    <application>
         <meta-data
             android:name="org.godotengine.plugin.v1.GodotFirebaseAnalytics"
             android:value="com.onecat.godotfirebaseanalytics.GodotFirebaseAnalytics" />
-
     </application>
 </manifest>
