SDK 23.0.0, Godot 3.6.2+, rev.1
- Gradle project sturcture is no longer twofold
- Bumped to AGP 8.6.1 / Godot 3.6.2 / API level 35 / 16kb mempage support / NDK 28
- Added network security config permitting cleartext traffic
- Bumped to BoM 34.4.0 (Analytics 23.0.0)
- Added info about using BoM to Readme
- Fixed setUserProperty() in GDScript wrapper having and argument overshadowing the built-in Node field

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,19 @@
-include ':godot-firebase-analytics'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    plugins {
+        id("com.android.library") version "8.6.1"
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "Godot Firebase Analytics"
